<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/header_parent"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:id="@+id/linerMainId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_parent"
        android:layout_margin="@dimen/_4sdp"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:text="@string/email_address"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEmailContactId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:autoLink="email"
            android:padding="@dimen/_4sdp"
            android:text="@string/spass_spassonline_com"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:text="@string/website"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUrlContactId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:autoLink="web"
            android:padding="@dimen/_4sdp"
            android:text="@string/www_spassonline_com"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:text="@string/phone"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNumberContactId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:autoLink="phone"
            android:padding="@dimen/_4sdp"
            android:text="@string/_256792790187"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_270sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image" />

</RelativeLayout>

