<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <WebView
        android:id="@+id/wbHelpId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtInformantionHelpId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/more_information_visit_or_call"
        android:textAlignment="center"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/txtWebSiteHelpId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:autoLink="web"
        android:text="@string/weburl"
        android:textAlignment="center"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/txtConatctHelpId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:autoLink="phone"
        android:text="@string/contact"
        android:textAlignment="center"
        android:textSize="@dimen/_16sdp" />
</LinearLayout>