<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/relativeMainOtpId"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_140sdp">

                <EditText
                    android:id="@+id/etOtpId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:hint="@string/enter_otp"
                    android:inputType="number"
                    android:textColorHint="@color/black"
                    android:textStyle="normal"

                    />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtResendOtpId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:padding="@dimen/_4sdp"
                android:text="@string/i_have_didn_t_received_a_code"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linerCountOtpId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:orientation="horizontal">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/resend_code_in"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSetTimeOtpId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/_00"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btnsubmitOtpId"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_password"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/submitOtp"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_320sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image" />

    </RelativeLayout>
</LinearLayout>
