<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/relativeMainRegisterId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:id="@+id/linearSecondRegisterId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/pickerCountryCodeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_150sdp"
                android:gravity="center"
                app:countryPreference="US,IN,NZ"
                app:showFlag="false" />

            <EditText
                android:id="@+id/ed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_150sdp"
                android:background="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:paddingBottom="20dp"
                android:text="@string/ffff1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_135sdp">

                <EditText

                    android:id="@+id/etMobileNumberRegisterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="numberSigned"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textStyle="normal" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btnSubmitRegisterId"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearSecondRegisterId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_button"
            android:padding="@dimen/_8sdp"
            android:text="@string/submit1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_340sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image" />

    </RelativeLayout>
</LinearLayout>
