<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6FA"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <ImageView

                android:id="@+id/imageView"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/ic_normal_circle" />

            <TextView
                android:id="@+id/txtSchoolChangeSettingId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingTop="@dimen/_6sdp"
                android:text="@string/change_school"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sdp"
                android:textStyle="normal" />

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/ic_normal_circle" />

            <TextView
                android:id="@+id/txtNumberChangeSettingId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingTop="@dimen/_6sdp"
                android:text="@string/change_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sdp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/ic_normal_circle"/>

            <TextView
                android:id="@+id/txtMyAccountSettingId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingTop="@dimen/_6sdp"
                android:text="@string/my_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sdp"
                android:textStyle="normal" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>