<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
            android:id="@+id/txtHaderNameSearchSchoolId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/_110sdp"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/school_list1"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_marginRight="20dp"
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_action_search_white" />
        </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_srch"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <ImageView
            android:paddingTop="10dp"
            android:layout_marginRight="20dp"
            android:id="@+id/backks"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_left_arrow" />
    <EditText
        android:visibility="visible"
        android:id="@+id/search_box11"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:drawablePadding="20dp"
        android:hint="@string/search_for_school"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/bg_color_cursor"
        android:paddingBottom="12dp"
        android:paddingLeft="8dp"
        android:paddingTop="5dp"

        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="@dimen/_70sdp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSubmitSearchSchoolId"

        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layoutManager="LinearLayoutManager">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btnSubmitSearchSchoolId"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:background="@drawable/bg_button"
        android:text="@string/submitsearch"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/white"
       />


</RelativeLayout>